# adventofcode2021

./: Cargo.toml
src/dec1/: dec1.rs  example.rs  main.rs
src/dec2/: main.rs
src/dec3/: main.rs
src/lib/: a2021lib.rs
